--- a/css/prescription.css
+++ b/css/prescription.css
@@ -373,7 +373,7 @@
     position: absolute;
     right: 10px;
     padding: 8px 16px;
-    background-color: #ccc;
+    background-color: #22fc16;
     color: white;
     border: none;
     border-radius: 6px;
@@ -699,6 +699,49 @@
     font-size: 12px;
     color: rgb(110, 110, 124);
     background-color: white;
+}
+
+/* 비활성화된 버튼 스타일 */
+.save-btn.disabled, .send-btn.disabled {
+    background-color: #cccccc !important;
+    cursor: not-allowed !important;
+    opacity: 0.7;
+}
+
+/* Save 버튼 스타일 수정 */
+.save-btn {
+    position: absolute;
+    right: 275px;
+    width: 80px;
+    height: 33px;
+    border: none;
+    border-radius: 6px;
+    background-color: #4287f5;
+    color: white;
+    font-size: 12px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.save-btn:hover {
+    background-color: #2a6dd9;
+}
+
+
+/* Send 버튼 스타일 수정 */
+.send-btn {
+    position: absolute;
+    right: 10px;
+    padding: 8px 16px;
+    background-color: #22fc16;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    height: 33px;
+    width: 80px;
 }
 
 
