--- a/css/data-menu.css
+++ b/css/data-menu.css
@@ -55,7 +55,7 @@
 
 /* 활성화된 필터 버튼 스타일 */
 .data-filter-btn.active {
-    background-color: #4e73df;
+    background-color: rgb(0, 82, 204);
     color: white;
     border-color: #4e73df;
     font-weight: 500;
