--- a/css/main.css
+++ b/css/main.css
@@ -81,12 +81,13 @@ body {
     cursor: pointer;
     background: none;
     border: none;
-    color: #000;
+    font-weight: bold;
+    color: #000000 ;
     font-size: 14px;
 }
 
 .login-section button:hover {
-    color: rgb(0, 0, 0);
+    color: rgb(0, 102, 255) ;
     text-shadow: 0 0 1px rgba(0, 0, 0, 0.6);
 }
 
@@ -155,7 +156,7 @@ body {
 }
 
 .modal-content {
-    background-color: white;
+    background-color: rgb(0, 102, 255);
     border-radius: 8px;
     box-shadow: 0 5px 15px rgba(0, 0, 102, 0.2);
     overflow: hidden;
@@ -183,6 +184,9 @@ body {
 
 .modal-body {
     padding: 20px;
+    background-color: white;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 .close-modal {
