--- a/css/loading.css
+++ b/css/loading.css
@@ -103,7 +103,7 @@ body {
     font-family: Arial, sans-serif;
     font-size: 20px;
     font-weight: bold;
-    color: #00774B;
+    color: #120A57;
     letter-spacing: 2px;
 }
 
